syntax = "proto3";
package file;

option go_package = "../file";

message PropertiesRequest {}

message Properties { string keyBaseUrl = 1; }
